infra/k8s/stories-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stories-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stories-mongo
  template:
    metadata:
      labels:
        app: stories-mongo
    spec:
      containers:
        - name: stories-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: stories-mongo-srv
spec:
  selector:
    app: stories-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
